--- a/base/css/style.css
+++ b/base/css/style.css
@@ -381,8 +381,8 @@ body ::-webkit-scrollbar-track {
 }
 .ico-camera {
   display: inline-block;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 3rem;
+  height: 3rem;
   background-image: url("/base/images/icon_camera.png");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -497,8 +497,8 @@ body ::-webkit-scrollbar-track {
 }
 .ico-map-above-camera {
   display: inline-block;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 3rem;
+  height: 3rem;
   background-image: url("/base/images/icon_camera.png");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -4288,6 +4288,7 @@ body ::-webkit-scrollbar-track {
   background: #4878c1 !important;
 }
 .camera-popup.current-active .model-traffic {
+  margin-top: 1rem;
   border-color: #2867e1;
   background: #003f9d;
 }
@@ -4490,10 +4491,6 @@ body ::-webkit-scrollbar-track {
 
 .model-traffic {
   display: none;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -19.1rem;
   background: #3d3d3d;
   border-radius: 0.5rem;
   border: 1px solid #727272;
@@ -5344,7 +5341,7 @@ body ::-webkit-scrollbar-track {
   cursor: url(/base/images/set_icon_cw_active2.png) 23.5 59, auto;
 }
 .ly-map.ico-set-camera-active {
-  cursor: url(/base/images/icon_camera_opacity.png) 14 17, auto;
+  cursor: url(/base/images/icon_camera_opacity.png) 11 22, auto;
 }
 .ly-map.ico-set-camera-active .speech-bubble-guide2 {
   top: -100px;
